Fix line-height, letter spacing and font sizes.

--- a/wp-content/themes/rentestate/src/sass/hero.scss
+++ b/wp-content/themes/rentestate/src/sass/hero.scss
@@ -35,6 +35,23 @@
 
             .hero__heading {
                 color: white;
+                font-size: em(32);
+                line-height: 41px;
+
+                @include breakpoint(mobile) {
+                    font-size: em(48);
+                    line-height: 56px;
+                }
+
+                @include breakpoint(smalldesktop) {
+                    font-size: em(60);
+                    line-height: 66px;
+                }
+
+                @include breakpoint(largedesktop) {
+                    font-size: em(84);
+                    line-height: 86px;
+                }
             }
         }
 
@@ -51,9 +68,19 @@
                 font-size: em(32);
                 line-height: 41px;
 
+                @include breakpoint(mobile) {
+                    font-size: em(48);
+                    line-height: 56px;
+                }
+
                 @include breakpoint(smalldesktop) {
                     font-size: em(60);
                     line-height: 66px;
+                }
+
+                @include breakpoint(largedesktop) {
+                    font-size: em(84);
+                    line-height: 86px;
                 }
             }
         }
